--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.7",
+    "draft-js-buttons": "^2.0.2",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
     "lodash": "^4.17.19",
     "next": "^9.5.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
